--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,10 @@
           <div class="site">
             <div class="header">
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+              <small><i>too long;don't care</i></small>
               <a class="extra" href="/">home</a>
             </div>
+
 
                 {{ content }}
 
